docs: updates artigo and references

--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -6,6 +6,9 @@
 \usepackage[brazil]{babel}
 \usepackage{comment}
 \usepackage{lipsum}
+\usepackage{csquotes}
+\usepackage{hyperref}
+
 
 \sloppy
 
@@ -14,7 +17,8 @@ em modelos de aprendizado de máquina na detecção de\\
 ataques de spoofing de GPS
 }
 
-\author{Ana Carla Rodrigues\inst{1}, Jessica Fileto\inst{1}, Jhossett Longobardi\inst{1}}
+\author{Ana Carla Rodrigues\inst{1}, Jessica Fileto\inst{1}, 
+    Jhossett Longobardi\inst{1}}
 
 \address{
   Centro de Matemática, Computação e Cognição\\
@@ -67,173 +71,69 @@ implementação do modelo.
 % Justificativa & Objetivos
 % Delimitação e Escopo & Organização do Trabalho
 
-%============================= Ana ============================================%
+%============================= Ana e Jessica ============================================%
+Os veículos aéreos não tripulados (VANTS) são conhecidos como aeronaves que operam sem piloto,
+sendo um tipo de tecnologia essencial em diversas áreas civis e militares.
+O uso de drones reduzem a exposição humana a tarefas repetitivas, de longa duração e em alguns casos perigosas \cite{dialogos}.
+Alguns exemplos de uso são: gerenciamento de desastres, vigilância aérea, fotografia aérea de rastreamento, pesquisa e resgate,
+monitoramento de gado, dentre outros. \cite{titounaLightweightSecurityTechnique2021} 
 
+Esses sistemas possuem designs versáteis para atender diversas necessidades,
+e para isso existem requerimentos para sua qualidade dentre eles estão: bateria, peso, tamanho e as coordenadas.
+Esses dispositivos carregam dados cruciais para seus usuários, devido ao seu longo alcance,
+para a realização de diversos trabalhos. \cite{khan}. 
 
+Por serem operados de maneira autônoma e remota suas coordenadas são essenciais
+para o cumprimento de seus objetivos, para isso são usados sinais de Sistema Global de Navegação por Satélite (GNSS),
+sendo o mais conhecido o \textit{Global Positioning System} (GPS), esses sinais podem ser criptografados ou não
+\cite {lester}. Sinais militares possuem criptografia, enquanto os que são de uso civil não possuem mecanismos de proteção.
+Com isso ocorre a extrema vulnerabilidade a diversos tipos de ataques, principalmente os conhecidos como \textit{Spoofing de GPS}.
+\cite{srinivasansGPSSpoofingDetection2023}.
 
-%============================= Jessica ========================================%
-
-\section{Justificativa}
-
-Os veículos aéreos não tripulados (VANTs), popularmente conhecidos como drones são amplamente utilizados, tanto no âmbito civil, quanto no militar. \cite{capitanFrameworkHandleThreats2019}
-
-Alguns exemplos de uso são: gerenciamento de desastres, vigilância aérea, fotografia aérea de rastreamento, pesquisa e resgate, monitoramento de gado, dentre outros. \cite{titounaLightweightSecurityTechnique2021}
-
-O GPS é o que torna os VANTs autônomos e capazes de concluir de maneira automatizada as diferentes tarefas a que são atribuídos. Estas informações são cruciais para seu desempenho e locomoção correta. A comunicação dos VANTs civis, diferente dos militares, utiliza comunicação desencriptada e não autenticada. Como este dispositivo depende primariamente de dados de localização de GPS, ele fica extremamente vulnerável a diversos tipos de ataques, principalmente os conhecidos como \textit{Spoofing de GPS}. \cite{srinivasansGPSSpoofingDetection2023,titounaLightweightSecurityTechnique2021}
+O tipo de ataque analisado nesse artigo é o \textit{spoofing}. 
+Ele é caracterizado por um atacante que faz uso de antenas terrestres emitindo sinais falsos
+de localização com o objetivo de direcionar o dispositivo em direção ao atacante \cite {Spoofing}.
+Esse tipo de ação pode resultar em: danos materiais e o acesso indevido aos dados do usuário,
+conforme relatado em diversos incidentes mundialmente.
+\cite{g1drone2022a,g1drone2022b,bandnews2022,bemparana2022,veja2022,forbes2020,australianaviation2022}
 
 \begin{quote}
-  Como resultado, garantir a segurança cibernética [\dots] se tornou uma preocupação crucial, abrangendo falhas potenciais do sistema e ataques externos em seus componentes. Isso destaca a necessidade de extensas pesquisas na segurança cibernética do VANT, que se concentram na detecção e prevenção de ataques e falhas.  \cite[tradução nossa]{elalamiDroneDefGANtGenerativeAIBased2024}
+  Como resultado, garantir a segurança cibernética [\dots] se tornou uma preocupação crucial [\dots].
+  Isso destaca a necessidade de extensas pesquisas na segurança cibernética [\dots] que se concentram na detecção
+  e prevenção de ataques e falhas.  \cite[tradução nossa]{elalamiDroneDefGANtGenerativeAIBased2024}
 \end{quote}
 
+Para garantir um vôo seguro do VANT é essencial ter medidas para detecção dos ataques de \textit{Spoofing de GPS}.
+A identificação precisa desses ataques é extremamente importante, pois técnicas avançadas de \textit{spoofing}
+podem causar disrupção no funcionamento do VANT. Portanto são necessários métodos robustos e adaptativos.
+\cite{isleyenGPSSpoofingDetection2024}
 
-
-
-\section{Objetivos}
-
-%=========================== Stalinn ==========================================%
+Segundo \cite[tradução nossa]{isleyenGPSSpoofingDetection2024},
+\enquote{Os algoritmos de aprendizado de máquina podem analisar grandes volumes de dados
+para identificar padrões e anomalias sutis que são indicativas de falsificação.}
 
 %=========================== Stalinn ==========================================%
 
 %Delimitação e Escopo
-O \textit{dataset} foi tomado da base de dados do \textit{Mendeley Data} 
-\cite{aissou2022dataset}; esses dados foram gerados de sinais GPS autenticas e 
-contem aproximadamente 500,000 dados. Então, os resultados do trabalho ficam 
-limitados à esse \textit{dataset}.
+O \textit{dataset} que será tomado como base de dados é o \textit{Mendeley Data} 
+\cite{aissou2022dataset}, esses dados foram gerados de sinais GPS autênticos e 
+contém aproximadamente 500,000 dados que logo serão reduzidos a uma quantidade
+considerável. Então, os resultados do trabalho ficarão
+limitados a este \textit{dataset}.
 
-Nas proximas seções se estabelece a execução do trabalho. Na seção 2, fazemos 
+Nas próximas seções se estabelecerá a execução do trabalho. Na seção 2, faremos 
 nossa proposta de mudança ao trabalho de \cite{Aissou2021}, discutindo a 
-metodologia e modelos de aprendizado de maquina a
+metodologia e modelos de aprendizado de máquina a
 serem implementados. Logo, os resultados e 
-discusões são apresentados na seção 3. Finalmente, nossas conclusões sobre o 
-trabalho são expostas na seção 4.
+discussões serão apresentados na seção 3. Finalmente, nossas conclusões sobre o 
+trabalho serão expostos na seção 4.
 
-\section{Proposta de mudança (Metodologia)} % A outra seção que temos que armar
-
-\lipsum[1-4]
+\section{Metodologia (Proposta de mudança)} % A outra seção que temos que armar
 
 
 
-\section{Proposta de mudança (Metodologia)} % A outra seção que temos que armar
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%% Instructions %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{comment}
-
-\section{General Information}
-
-All full papers and posters (short papers) submitted to some SBC conference,
-including any supporting documents, should be written in English or in
-Portuguese. The format paper should be A4 with single column, 3.5 cm for upper
-margin, 2.5 cm for bottom margin and 3.0 cm for lateral margins, without
-headers or footers. The main font must be Times, 12 point nominal size, with 6
-points of space before each paragraph. Page numbers must be suppressed.
-
-Full papers must respect the page limits defined by the conference.
-Conferences that publish just abstracts ask for \textbf{one}-page texts.
-
-\section{First Page} \label{sec:firstpage}
-
-The first page must display the paper title, the name and address of the
-authors, the abstract in English and ``resumo'' in Portuguese (``resumos'' are
-required only for papers written in Portuguese). The title must be centered
-over the whole page, in 16 point boldface font and with 12 points of space
-before itself. Author names must be centered in 12 point font, bold, all of
-them disposed in the same line, separated by commas and with 12 points of
-space after the title. Addresses must be centered in 12 point font, also with
-12 points of space after the authors' names. E-mail addresses should be
-written using font Courier New, 10 point nominal size, with 6 points of space
-before and 6 points of space after.
-
-The abstract and ``resumo'' (if is the case) must be in 12 point Times font,
-indented 0.8cm on both sides. The word \textbf{Abstract} and \textbf{Resumo},
-should be written in boldface and must precede the text.
-
-\section{CD-ROMs and Printed Proceedings}
-
-In some conferences, the papers are published on CD-ROM while only the
-abstract is published in the printed Proceedings. In this case, authors are
-invited to prepare two final versions of the paper. One, complete, to be
-published on the CD and the other, containing only the first page, with
-abstract and ``resumo'' (for papers in Portuguese).
-
-\section{Sections and Paragraphs}
-
-Section titles must be in boldface, 13pt, flush left. There should be an extra
-12 pt of space before each title. Section numbering is optional. The first
-paragraph of each section should not be indented, while the first lines of
-subsequent paragraphs should be indented by 1.27 cm.
-
-\subsection{Subsections}
-
-The subsection titles must be in boldface, 12pt, flush left.
-
-\section{Figures and Captions}\label{sec:figs}
-
-
-Figure and table captions should be centered if less than one line
-(Figure~\ref{fig:exampleFig1}), otherwise justified and indented by 0.8cm on
-both margins, as shown in Figure~\ref{fig:exampleFig2}. The caption font must
-be Helvetica, 10 point, boldface, with 6 points of space before and after each
-caption.
-
-\begin{figure}[ht]
-\centering
-\includegraphics[width=.5\textwidth]{fig1.jpg}
-\caption{A typical figure}
-\label{fig:exampleFig1}
-\end{figure}
-
-\begin{figure}[ht]
-\centering
-\includegraphics[width=.3\textwidth]{fig2.jpg}
-\caption{This figure is an example of a figure caption taking more than one
-  line and justified considering margins mentioned in Section~\ref{sec:figs}.}
-\label{fig:exampleFig2}
-\end{figure}
-
-In tables, try to avoid the use of colored or shaded backgrounds, and avoid
-thick, doubled, or unnecessary framing lines. When reporting empirical data,
-do not use more decimal digits than warranted by their precision and
-reproducibility. Table caption must be placed before the table (see Table 1)
-and the font used must also be Helvetica, 10 point, boldface, with 6 points of
-space before and after each caption.
-
-\begin{table}[ht]
-\centering
-\caption{Variables to be considered on the evaluation of interaction
-  techniques}
-\label{tab:exTable1}
-\includegraphics[width=.7\textwidth]{table.jpg}
-\end{table}
-
-\section{Images}
-
-All images and illustrations should be in black-and-white, or gray tones,
-excepting for the papers that will be electronically available (on CD-ROMs,
-internet, etc.). The image resolution on paper should be about 600 dpi for
-black-and-white images, and 150-300 dpi for grayscale images.  Do not include
-images with excessive resolution, as they may take hours to print, without any
-visible difference in the result. 
-
-
-
-Bibliographic references must be unambiguous and uniform.  We recommend giving
-the author names references in brackets, e.g. 
-
-The references must be listed using 12 point font size, with 6 points of space
-before each reference. The first line of each reference should not be
-indented, while the subsequent should be indented by 0.5 cm.
-
-\end{comment}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% End %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\lipsum[1-3]
 \bibliographystyle{sbc}
 \bibliography{references}
-
 
 \end{document}
