--- a/article/references.bib
+++ b/article/references.bib
@@ -1,4 +1,4 @@
-@INPROCEEDINGS{Aissou2021,
+@inproceedings{Aissou2021,
   author={Aissou, Ghilas and Slimane, Hadjar Ould and Benouadah, Selma and Kaabouch, Naima},
   booktitle={2021 IEEE 12th Annual Ubiquitous Computing, Electronics $\&$ Mobile Communication Conference (UEMCON)}, 
   title={Tree-based Supervised Machine Learning Models For Detecting GPS Spoofing Attacks on UAS}, 
@@ -9,6 +9,7 @@
   keywords={Radio frequency;Navigation;Memory management;Security;Random forests;Global Positioning System;Software radio;UAS;GPS Spoofing Attacks;Detection Tech-niques;Machine Learning},
   doi={10.1109/UEMCON53757.2021.9666744}
 }
+
 @inproceedings{capitanFrameworkHandleThreats2019,
 title = {A Framework to Handle Threats for {{UAS}} Operating in the {{U-space}}},
 booktitle = {2019 {{Workshop}} on {{Research}}, {{Education}} and {{Development}}
@@ -19,26 +20,9 @@ year = {2019},
 month = nov,
 pages = {1--8},
 doi = {10.1109/REDUAS47371.2019.8999673},
-urldate = {2025-07-23},
-abstract = {This paper presents a framework to handle threats for UAS operating in
-the U-space. During UAS operations, unexpected events or threats can happen and
-put the UAS in danger. In order to handle those situations, we propose a module for
-threats management that incorporates autonomous decision-making capabilities
-and is integrated with the U-space. First, we survey related works and compile a
-classification of event classes as well as possible contingency or emergency
-procedures. Then, we devise an approach to integrate our decision-making
-procedure within the U-space framework. This approach selects the proposed
-mitigation actions depending on the operational state of the UAS involved. Our
-framework takes a step forward in the integration of autonomous systems in the U
-space, as there is no current solution for emergency management without the
-intervention of UAS operators.},
-langid = {american},
-annotation = {TLDR: This framework takes a step forward in the integration of
-autonomous systems in the U-space, as there is no current solution for emergency
-management without the intervention of UAS operators.},
-file = {/home/jessicafileto/Zotero/storage/AEHBLJ73/Capitán et al. - 2019 - A
-framework to handle threats for UAS operating in the U-space.pdf}
+urldate = {2025-07-23}
 }
+
 @inproceedings{elalamiDroneDefGANtGenerativeAIBased2024,
 title = {{{DroneDefGANt}}: {{A Generative AI-Based Approach}} for {{Detecting UAS
 Attacks}} and {{Faults}}},
@@ -50,35 +34,9 @@ year = {2024},
 month = jun,
 pages = {1933--1938},
 issn = {1938-1883},doi = {10.1109/ICC51166.2024.10622524},
-urldate = {2025-07-23},
-abstract = {Recently, Unmanned Aerial Systems (UAS) have become heavily reliant
-on communication, navigation, and other critical components such as sensors and
-actuators, which are essential for operations in both civilian and defense
-applications. However, this increasing reliance makes UAS more vulnerable to
-attacks and faults, posing rising threats. While there have been many advances in
-UAS security, a significant number of studies have proposed artificial intelligence
-(AI)-enhanced solutions to address these challenges. Yet, no research has explored
-the potential of generative AI (GenAI) in this domain. GenAI stands out due to its
-ability to detect and prevent cyberattacks by continuously learning and adapting to
-new threats and vulnerabilities. In this paper, we propose DroneDefGANt, a GenAI
-based approach that combines the capabilities of generative adversarial networks
-(GAN) and transformer models. The DroneDefGANt is designed to detect both
-external UAS attacks like GPS spoofing and jamming, and internal attacks such as
-actuator faults. Through evaluations using synthetic datasets, DroneDefGANt
-surpassed various conventional AI models, demonstrating superior accuracy and
-robustness, particularly in the presence of Gaussian noise.},
-keywords = {Actuators,cybersecurity,Fault detection,Generative adversarial
-networks,Generative AI,GPS jamming,GPS
-spoofing,Navigation,Robustness,Security,Sensor systems and
-applications,Transformers,UAS},
-annotation = {TLDR: The proposed DroneDefGANt is a GenAI-based approach that
-combines the capabilities of generative adversarial networks (GAN) and transformer
-models, designed to detect both external UAS attacks like GPS spoofing and
-jamming, and internal attacks such as actuator faults.},
-file = {/home/jessicafileto/Zotero/storage/P747U9WL/El alami and Rawat - 2024 -
-DroneDefGANt A Generative AI-Based Approach for Detecting UAS Attacks and
-Faults.pdf}
+urldate = {2025-07-23}
 }
+
 @inproceedings{isleyenGPSSpoofingDetection2024,
 title = {{{GPS Spoofing Detection}} on {{Autonomous Vehicles}} with {{XGBoost}}},
 booktitle = {2024 9th {{International Conference}} on {{Computer Science}} and
@@ -89,27 +47,14 @@ month = oct,
 pages = {500--505},
 issn = {2521-1641},
 doi = {10.1109/UBMK63289.2024.10773593},
-urldate = {2025-07-23},abstract = {Global Positioning System (GPS) spoofing presents a significant threat
-to the reliability and security of global navigation systems by impacting various
-critical sectors such as military, transportation, communication, and finance.
-Traditional methods for detecting GPS spoofing often fall short in addressing
-sophisticated spoofing attacks. In our work, we investigate the application of
-machine learning techniques to enhance the detection of GPS spoofing. We aim to
-identify patterns and anomalies in GPS signals that indicate spoofing attempts by
-leveraging data-driven approaches. Our proposed method involves training machine
-learning models on a dataset comprising both legitimate and spoofed GPS signals.
-The results obtained from this work demonstrate the effectiveness of these models
-in accurately detecting spoofing incidents, particularly with t he tree-based machine
-learning model XGBoost. This research underscores the potential of machine
-learning to provide robust, real-time spoofing detection, thereby enhancing the
-resilience of GPS-dependent systems against malicious attacks, with XGBoost
-standing out for its high accuracy.},
+urldate = {2025-07-23},
 langid = {american},
 keywords = {/unread,Accuracy,autonomous vehicles,cybersecurity,Global
 Positioning System,GPS spoofing detection,machine learning,Machine
 learning,Pattern recognition,Real-time
 systems,Resilience,Robustness,Security,Training,Transportation}
 }
+
 @article{nayfehMachineLearningModeling2023,
 title = {Machine {{Learning Modeling}} of {{GPS Features}} with {{Applications}} to
 {{UAV Location Spoofing Detection}} and {{Classification}}},
@@ -123,22 +68,10 @@ pages = {103085},
 publisher = {Elsevier BV},
 issn = {0167-4048},
 doi = {10.1016/j.cose.2022.103085},
-urldate = {2025-07-23},abstract = {In this paper, machine learning (ML) modeling is proposed for the
-detection and classification of global positioning system (GPS) spoofing in
-unmanned aerial vehicles (UAVs). Three testing scenarios are implemented in an
-outdoor yet controlled setup to investigate static and dynamic attacks. In these
-scenarios, authentic sets of GPS signal features are collected, followed by other sets
-obtained while the UAV is under spoofing attacks launched with a software-defined
-radio (SDR) transceiver module. All sets are standardized, analyzed for correlation,
-and reduced according to feature importance prior to their exploitation in training,
-validating, and testing different multiclass ML classifiers. The resulting performance
-evaluation of these classifiers shows a detection rate (DR), misdetection rate (MDR),
-and false alarm rate (FAR) better than 92\%, 13\%, and 4\%, respectively, together
-with a sub-millisecond detection time. Hence, the proposed modeling facilitates
-accurate real-time GPS spoofing detection and classification for UAV applications.},
 copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
 langid = {english},
 }
+
 @article{sheGPSSpoofingAttack2024,
 title = {{{GPS Spoofing Attack Recognition}} for {{UAVs With Limited Samples}}},
 author = {She, Dingchen and Wang, Wei and Yin, Zhisheng and Wang, Jiaqi and
@@ -152,21 +85,6 @@ publisher = {{Institute of Electrical and Electronics Engineers (IEEE)}},
 issn = {2327-4662, 2372-2541},
 doi = {10.1109/jiot.2024.3465528},
 urldate = {2025-07-23},
-abstract = {As a malicious attack targeting on the GPS receiver, GPS spoofing attack
-interferes the normal received satellite signal by reproducing or relaying the signal,
-resulting in severe position deviation. Such attack has posed significant security
-threat to unmanned-aerial-vehicles (UAVs), especially in the era of lowaltitude
-economics. However, due to the similarity of the spoofing and intended signal, and
-the presence of noise, accurate detection and recognition of GPS spoofing attack
-still remains a challenging issue, particularly in the case of limited samples. In this
-article, we apply the AdaBoost-CNN algorithm, which combines multiple weakconvolutional neural network (CNN) classifiers into a strong classification model, to
-achieve GPS spoofing attack recognition. To further improve the recognition
-accuracy when there are very limited samples, we improve the AdaBoost-CNN
-algorithm by transferring previous network parameters to subsequent CNN. Both
-simulated and real measurement data are employed to verify the effectiveness of
-the proposed scheme. It is shown that the recognition accuracy can reach up to
-93.75\% and 95.83\% with 160 simulated samples and 120 measured samples,
-respectively.},
 copyright = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license
 information/IEEE.html},
 langid = {english},
@@ -174,6 +92,7 @@ keywords = {Accuracy,AdaBoost-CNN algorithm,Autonomous aerial
 vehicles,Doppler shift,Feature extraction,Global Positioning System,GPS spoofing
 attack,limited samples,Receivers,Satellites,spoofing attack recognition}
 }
+
 @inproceedings{srinivasansGPSSpoofingDetection2023,
 title = {{{GPS Spoofing Detection}} in {{UAV Using Motion Processing Unit}}},
 booktitle = {2023 11th {{International Symposium}} on {{Digital Forensics}} and
@@ -183,36 +102,9 @@ year = {2023},
 month = may,
 pages = {1--4},
 doi = {10.1109/ISDFS58141.2023.10131729},
-urldate = {2025-07-23},
-abstract = {To facilitate navigation and tracking, UAVs (unmanned aerial vehicles) or
-drones rely on the global positioning system (GPS). Still, unmanned aerial vehicles
-are resistless to GPS spoofing attacks, which involve manipulating GPS module
-receivers by transmitting altered signals. For example, an adversary using an adverse
-GPS simulator could broadcast counterfeit GPS signals, causing a GPS-reliant UAV to
-deviate from its intended flight path. This can result in loss of position accuracy and
-potentially cause a crash or unauthorized access to restricted areas. To mitigate this
-issue, several approaches have been advocated to detect GPS spoofing attacks.
-Motion Processing Units (MPUs) have emerged as a promising option, as they canprovide precise measurements of the UAVs orientation and movement, enabling the
-mitigation and detection of spoofing attacks on GPS signals. In this study, a
-technique is introduced for identifying and counteracting GPS spoofing attacks in
-drones or unmanned aerial vehicles (UAVs) using data from the MPU9250. The
-approach employs data from the accelerometer, gyroscope, and magnetometer
-along all three axes to detect instances of GPS spoofing and recover accurate GPS
-coordinates. Any noteworthy divergence in the gyroscope readings is considered as a
-possible GPS spoofing attack. To evaluate the efficacy of the propounded method, it
-is tested using real-world experiments, which demonstrate its capability to
-successfully detect falsified GPS signals.},
-keywords = {/unread,Accelerometers,Autonomous aerial vehicles,GPS
-spoofing,Gyroscopes,Magnetometers,MPU,Navigation,path
-loss,Receivers,Security,UAV},
-annotation = {TLDR: A technique is introduced for identifying and counteracting
-GPS spoofing attacks in drones or unmanned aerial vehicles (UAVs) using data from
-the MPU9250, and it is tested using real-world experiments, which demonstrate its
-capability to successfully detect falsified GPS signals.},
-file = {/home/jessicafileto/Zotero/storage/8RZEMTUL/Srinivasan S and
-Sathyadevan - 2023 - GPS Spoofing Detection in UAV Using Motion Processing
-Unit.pdf}
+urldate = {2025-07-23}
 }
+
 @inproceedings{titounaLightweightSecurityTechnique2021,
 title = {A {{Lightweight Security Technique For Unmanned Aerial Vehicles Against
 GPS Spoofing Attack}}},
@@ -224,32 +116,9 @@ month = jun,
 pages = {819--824},
 issn = {2376-6506},
 doi = {10.1109/IWCMC51323.2021.9498734},
-urldate = {2025-07-23},
-abstract = {The use of Unmanned Aerial Vehicles (UAVs) in military and civil
-applications is increased in recent years. These UAVs are generally equipped with a
-set of sensors and follow a predefined trajectory. The regions of deployment are
-usually hostile environments and inaccessible such as disaster zone or military fields.
-Therefore, to accomplish their mission, the UAVs need to communicate with each
-other, with the Ground Control Station (GCS) and with the navigation satellite
-system. Through these infrastructures, the UAVs are prone and vulnerable to various
-cyber-attacks such as GPS spoofing. This attack can be launched easily by anattacker using a simple transmitter by broadcasting fake and wrong GPS signals.
-These signals can mislead UAVs that receive them from their initial trajectory. In
-order to ensure the predefined UAV's mission, detecting GPS spoofing attacks is a
-real challenge and permits to get a high level of flight security, high reliability, and
-schedule maintenance in time. In this research, we model this issue using a Bayesian
-network in order to detect this type of attack, and then, the model analyzes and
-detects the fake GPS signal data. The preliminary results that our proposal provides
-are promising in terms of a set of metrics.},
-keywords = {Analytical models,Bayesian network,Correlation,Data models,GPS
-spoofing attack detection,Measurement,Trajectory,Unmanned aerial
-vehicles,Wireless communication},
-annotation = {TLDR: This research model this issue using a Bayesian network in
-order to detect this type of attack, and then, the model analyzes and detects the fake
-GPS signal data.},
-file = {/home/jessicafileto/Zotero/storage/KKBG8LVH/Titouna and Naït
-Abdesselam - 2021 - A Lightweight Security Technique For Unmanned Aerial
-Vehicles Against GPS Spoofing Attack.pdf}
+urldate = {2025-07-23}
 }
+
 @inproceedings{wagnerSecuringCyberPhysicalSystems2023,
 title = {Securing {{Cyber-Physical Systems Against GPS Spoofing Attacks Using
 Confidence Attribution}}},
@@ -261,28 +130,7 @@ month = sep,
 pages = {1--6},
 issn = {1847-358X},
 doi = {10.23919/SoftCOM58365.2023.10271629},
-urldate = {2025-07-23},
-abstract = {This work addresses the use of a machine-learning based confidence
-attribution scheme to detect GPS spoofing attacks against cyber-physical systems.
-The confidence attribution scheme assigns a continuous value, between 0\% and
-100\%, to each measurement, expressing how consistent this measurement is with
-measurements from other sensors in a cyber-physical system. By verifying the
-consistency of GPS measurements when compared to other sensors available, such
-as those present in an inertial measurement unit, it is possible to detect GPS
-spoofing attacks. The solution is evaluated on an experimentally acquired dataset
-containing flight logs, including sensor measurements and control signals, of an
-UAV subject to GPS spoofing attacks. The results show the number of anomalies
-detected by the confidence attribution scheme increases significantly in thepresence of a GPS spoofing attack, rendering its detection.},
-keywords = {/unread,Autonomous aerial vehicles,Cyber-physical systems,Cyber
-Physical Systems,Cyber-Security,GPS Spoofing,Machine learning,Machine
-Learning,Rendering (computer graphics),Sensor phenomena and
-characterization,Sensor systems,Software},
-annotation = {TLDR: The results show the number of anomalies detected by the
-confidence attribution scheme increases significantly in the presence of a GPS
-spoofing attack, rendering its detection.},
-file = {/home/jessicafileto/Zotero/storage/FRGW5BYK/Wagner and Fröhlich - 2023
-- Securing Cyber-Physical Systems Against GPS Spoofing Attacks Using Confidence
-Attribution.pdf}
+urldate = {2025-07-23}
 }
 
 @misc{aissou2022dataset,
@@ -290,5 +138,105 @@ Attribution.pdf}
   title        = {{A DATASET for GPS Spoofing Detection on Unmanned Aerial System}},
   year         = {2022},
   howpublished = {Mendeley Data, V3},
-  doi          = {10.17632/z7dj3yyzt8.3},
+  doi          = {10.17632/z7dj3yyzt8.3}
+}
+
+@techreport{dialogos,
+    author = "Dialogos Uniao Europeia Brasil",
+    title = "Estudo sobre a Indústria Brasileira e Europeia de Veículos aéreos não tripulados",
+    institution = "Dialogos Uniao Europeia Brasil",
+    year = 2025,
+    DOI = "https://www.gov.br/mdic/pt-br/images/publicacaoa_DRONES-20161130-20012017-web.pdf"
+}
+
+@article{khan,
+    author = { Amina Khan and Sumeet Gupta and Sachin Kumar Gupt },
+    title = "Emerging UAV technology for disaster detection, mitigation, response, and preparedness",
+    journal = "Journal of fields robotics",
+    year = 2022
+}
+
+@article{lester,
+    author = { Lester de A. Faria1
+and Caio A. de Melo Silvestre1
+and Marcelino A. Feitosa Correia1
+and Nelson A. Roso },
+    title = "GPS Jamming Signals Propagation in Free-Space, Urban and Suburban Environments",
+    journal = "Journal Aerospacial Tecnology Managment",
+    year = 2018,
+    page = 10,
+    DOI = "10.5028/jatm.v10.870"
+}
+
+@misc{GPSGOV,
+  author = {GPS},
+  title = {Information for Policymakers from the National Coordination Office
+for Space-Based Positioning, Navigation, and Timing (PNT) },
+  howpublished = {Global Positioning System Tracker},
+  year = {2025},
+  url = {https://www.gps.gov/congress/newsletter/2012/10.pdf},
+  urldate = {2025-07-23}
+}
+
+@article{Spoofing,
+  author = {Jafarnia-Jahromi, Ali and Broumandan, Ali and  Nielsen, J.and Lachapelle, Gérard},
+  title = {GPS Vulnerability to Spoofing Threats and a Review of Antispoofing Techniques},
+  journal = {International Journal of Navigation and Observation},
+  year = {2012},
+  DOI = "10.1155/2012/127072"
+}
+
+@misc{g1drone2022a,
+  author  = {G1},
+  title   = {Mulher é atingida por drone durante show e precisa passar por cirurgia no DF},
+  year    = {2022},
+  url     = {https://g1.globo.com/df/distrito-federal/noticia/2022/07/26/mulher-e-atingida-por-drone-durante-show-e-precisa-passar-por-cirurgia-no-df.ghtml},
+  urldate = {2025-07-24},
+  note   = {Disponível em: \href{https://g1.globo.com/df/distrito-federal/noticia/2022/07/26/mulher-e-atingida-por-drone-durante-show-e-precisa-passar-por-cirurgia-no-df.ghtml}{g1.globo.com}. Acesso em: 24 jul. 2025}
+}
+
+@misc{g1drone2022b,
+  author  = {G1},
+  title   = {Drone cai em cima de mulher durante show de Luan Santana na Expogrande},
+  year    = {2022},
+  url     = {https://g1.globo.com/pop-arte/noticia/2022/05/02/drone-cai-em-cima-de-mulher-durante-show-de-luan-santana-na-expogrande.ghtml},
+  urldate = {2025-07-24}
+}
+
+@misc{bandnews2022,
+  author  = {BandNews},
+  title   = {Cinco acidentes causados por drones são registrados no Oeste},
+  year    = {2022},
+  url     = {https://bandnewsfmcuritiba.com/cinco-acidentes-causados-por-drones-sao-registrados-no-oeste/},
+  urldate = {2025-07-24}
+}
+
+@misc{bemparana2022,
+  author  = {Bem Paraná},
+  title   = {Copel registra cinco acidentes com rede elétrica pelo uso de drones pulverizadores no Paraná},
+  year    = {2022},
+  url     = {https://www.bemparana.com.br/noticias/parana/copel-registra-cinco-acidentes-com-rede-eletrica-pelo-uso-de-drones-pulverizadores-no-parana/},
+  urldate = {2025-07-24}
+}
+
+@misc{veja2022,
+  author  = {Veja},
+  title   = {Drone da FAB que ajudava no monitoramento cai no Rio Grande do Sul},
+  year    = {2022},
+  url     = {https://veja.abril.com.br/tecnologia/drone-da-fab-que-ajudava-no-monitoramento-cai-no-rio-grande-do-sul/},
+  urldate = {2025-07-24}
+}
+@misc{forbes2020,
+  author  = {David Hambling},
+  title   = {Investigation finds GPS interference caused UK survey drone crash},
+  year    = {2020},
+  url     = {https://www.forbes.com/sites/davidhambling/2020/08/10/investigation-finds-gps-interference-caused-uk-survey-drone-crash/?sh=57b389bd534a},
+  urldate = {2025-07-24}
+}
+@misc{australianaviation2022,
+  author  = {Australian Aviation},
+  title   = {Electromagnetic interference behind Darling Harbour drone crash},
+  year    = {2022},
+  url     = {https://australianaviation.com.au/2022/06/electromagnetic-interference-behind-darling-harbour-drone-crash/},
+  urldate = {2025-07-24}
 }
