docs: fix direct citation

--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -7,8 +7,9 @@
 \usepackage{comment}
 \usepackage{lipsum}
 \usepackage{csquotes}
-\usepackage{hyperref}
+\usepackage{url}
 
+\urlstyle{same} 
 
 \sloppy
 
@@ -17,17 +18,16 @@ em modelos de aprendizado de máquina na detecção de\\
 ataques de spoofing de GPS
 }
 
-\author{Ana Carla Rodrigues\inst{1}, Jessica Fileto\inst{1}, 
-    Jhossett Longobardi\inst{1}}
+\author{Ana Carla Rodrigues\inst{1}, Jessica Fileto\inst{1}}
 
 \address{
   Centro de Matemática, Computação e Cognição\\
   Universidade Federal do ABC (UFABC)\\
   Av. dos Estados, 5001 -- 09210-580 -- Santo André -- SP -- Brasil
-  \email{\{carla.rodrigues,jessica.fileto,stalinn.longobardi\}@ufabc.edu.br}
+  \email{\{carla.rodrigues,jessica.fileto\}@ufabc.edu.br}
 }
 
-\begin{document} 
+\begin{document}
 
 \maketitle
 
@@ -108,11 +108,10 @@ A identificação precisa desses ataques é extremamente importante, pois técni
 podem causar disrupção no funcionamento do VANT. Portanto são necessários métodos robustos e adaptativos.
 \cite{isleyenGPSSpoofingDetection2024}
 
-Segundo \cite[tradução nossa]{isleyenGPSSpoofingDetection2024},
-\enquote{Os algoritmos de aprendizado de máquina podem analisar grandes volumes de dados
-para identificar padrões e anomalias sutis que são indicativas de falsificação.}
+Segundo Isleyen e Bahtiyar (2024, tradução nossa) \enquote{Os algoritmos de aprendizado de máquina podem analisar]
+grandes volumes de dados para identificar padrões e anomalias sutis
+que são indicativas de falsificação.}
 
-%=========================== Stalinn ==========================================%
 
 %Delimitação e Escopo
 O \textit{dataset} que será tomado como base de dados é o \textit{Mendeley Data} 
@@ -128,11 +127,9 @@ serem implementados. Logo, os resultados e
 discussões serão apresentados na seção 3. Finalmente, nossas conclusões sobre o 
 trabalho serão expostos na seção 4.
 
-\section{Metodologia (Proposta de mudança)} % A outra seção que temos que armar
+\section{Metodologia (Proposta de mudança)}
 
-
-
-\lipsum[1-3]
+\lipsum[1-5]
 \bibliographystyle{sbc}
 \bibliography{references}
 
