--- a/article/references.bib
+++ b/article/references.bib
@@ -55,6 +55,7 @@ learning,Pattern recognition,Real-time
 systems,Resilience,Robustness,Security,Training,Transportation}
 }
 
+
 @article{nayfehMachineLearningModeling2023,
 title = {Machine {{Learning Modeling}} of {{GPS Features}} with {{Applications}} to
 {{UAV Location Spoofing Detection}} and {{Classification}}},
@@ -191,15 +192,15 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   title   = {Mulher é atingida por drone durante show e precisa passar por cirurgia no DF},
   year    = {2022},
   url     = {https://g1.globo.com/df/distrito-federal/noticia/2022/07/26/mulher-e-atingida-por-drone-durante-show-e-precisa-passar-por-cirurgia-no-df.ghtml},
+  note = {Disponível em: \url{https://g1.globo.com/df/distrito-federal/noticia/2022/07/26/mulher-e-atingida-por-drone-durante-show-e-precisa-passar-por-cirurgia-no-df.ghtml}},
   urldate = {2025-07-24},
-  note   = {Disponível em: \href{https://g1.globo.com/df/distrito-federal/noticia/2022/07/26/mulher-e-atingida-por-drone-durante-show-e-precisa-passar-por-cirurgia-no-df.ghtml}{g1.globo.com}. Acesso em: 24 jul. 2025}
 }
 
 @misc{g1drone2022b,
   author  = {G1},
   title   = {Drone cai em cima de mulher durante show de Luan Santana na Expogrande},
   year    = {2022},
-  url     = {https://g1.globo.com/pop-arte/noticia/2022/05/02/drone-cai-em-cima-de-mulher-durante-show-de-luan-santana-na-expogrande.ghtml},
+  note     = {Disponível em: \url{https://g1.globo.com/pop-arte/noticia/2022/05/02/drone-cai-em-cima-de-mulher-durante-show-de-luan-santana-na-expogrande.ghtml}. Acesso em: 24 jul. 2025},
   urldate = {2025-07-24}
 }
 
@@ -208,6 +209,7 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   title   = {Cinco acidentes causados por drones são registrados no Oeste},
   year    = {2022},
   url     = {https://bandnewsfmcuritiba.com/cinco-acidentes-causados-por-drones-sao-registrados-no-oeste/},
+  note = {Disponível em: \url{https://bandnewsfmcuritiba.com/cinco-acidentes-causados-por-drones-sao-registrados-no-oeste/}. Acesso em: 24 jul. 2025},
   urldate = {2025-07-24}
 }
 
@@ -216,6 +218,7 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   title   = {Copel registra cinco acidentes com rede elétrica pelo uso de drones pulverizadores no Paraná},
   year    = {2022},
   url     = {https://www.bemparana.com.br/noticias/parana/copel-registra-cinco-acidentes-com-rede-eletrica-pelo-uso-de-drones-pulverizadores-no-parana/},
+  note = {Disponível em: \url{https://www.bemparana.com.br/noticias/parana/copel-registra-cinco-acidentes-com-rede-eletrica-pelo-uso-de-drones-pulverizadores-no-parana/}. Acesso em: 24 jul. 2025},
   urldate = {2025-07-24}
 }
 
@@ -224,6 +227,7 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   title   = {Drone da FAB que ajudava no monitoramento cai no Rio Grande do Sul},
   year    = {2022},
   url     = {https://veja.abril.com.br/tecnologia/drone-da-fab-que-ajudava-no-monitoramento-cai-no-rio-grande-do-sul/},
+  note = {Disponível em: \url{https://veja.abril.com.br/tecnologia/drone-da-fab-que-ajudava-no-monitoramento-cai-no-rio-grande-do-sul/}. Acesso em: 24 jul. 2025},
   urldate = {2025-07-24}
 }
 @misc{forbes2020,
@@ -231,6 +235,7 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   title   = {Investigation finds GPS interference caused UK survey drone crash},
   year    = {2020},
   url     = {https://www.forbes.com/sites/davidhambling/2020/08/10/investigation-finds-gps-interference-caused-uk-survey-drone-crash/?sh=57b389bd534a},
+  note = {Disponível em: \url{https://www.forbes.com/sites/davidhambling/2020/08/10/investigation-finds-gps-interference-caused-uk-survey-drone-crash/?sh=57b389bd534a}. Acesso em: 24 jul. 2025},
   urldate = {2025-07-24}
 }
 @misc{australianaviation2022,
@@ -238,5 +243,6 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   title   = {Electromagnetic interference behind Darling Harbour drone crash},
   year    = {2022},
   url     = {https://australianaviation.com.au/2022/06/electromagnetic-interference-behind-darling-harbour-drone-crash/},
+  note = {Disponível em: \url{https://australianaviation.com.au/2022/06/electromagnetic-interference-behind-darling-harbour-drone-crash/}. Acesso em: 24 jul. 2025},
   urldate = {2025-07-24}
 }
