proposta de mudança

--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -119,7 +119,9 @@ trabalho serão expostos na seção 4.
 
 \section{Metodologia (Proposta de mudança)}
 
-\lipsum[1-5]
+Para alcançar o objetivo deste estudo, esta seção detalha a abordagem proposta para a classificação de possíveis ataques de \textit{spoofing} a sinais de GPS, avaliando o desempenho dos algoritmos: (i) Naive Bayes, (ii) K-NN, (iii) Extreme Random Forest, (iv) Random Forest e (v)  Gaussian Naive Bayes. 
+A metodologia adotada e os passos seguidos foram inspirados no artigo de \citar o artigo\, com o objetivo de explorar os dados obtido. Serão analisados a acurácia, precisão e a quantidade de falsos negativos.
+
 \bibliographystyle{sbc}
 \bibliography{references}
 
