--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -105,7 +105,7 @@ trabalho serão expostos na seção 5.
 \section{Metodologia (Proposta de mudança)}
 
 Para alcançar o objetivo deste estudo, esta seção detalha a abordagem proposta para a classificação de possíveis ataques de \textit{spoofing} a sinais de GPS, avaliando o desempenho dos algoritmos: (i) Naive Bayes, (ii) K-NN, (iii) Extreme Random Forest, (iv) Random Forest e (v)  Gaussian Naive Bayes. 
-A metodologia adotada e os passos seguidos foram inspirados no artigo de \citar o artigo\, com o objetivo de explorar os dados obtido. Serão analisados a acurácia, precisão e a quantidade de falsos negativos.
+A metodologia adotada e os passos seguidos foram inspirados no artigo de \cite{Aissou2021}, com o objetivo de explorar os dados obtido. Serão analisados a acurácia, precisão e a quantidade de falsos negativos.
 
 \bibliographystyle{sbc}
 \bibliography{references}
