--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -72,8 +72,8 @@ implementação do modelo.
 % Delimitação e Escopo & Organização do Trabalho
 
 %============================= Ana e Jessica ============================================%
-Os veículos aéreos não tripulados (VANTS), também conhecidos como drone, são conhecidos como aeronaves que operam sem piloto,
-sendo um tipo de tecnologia fundamental tanto em áreas civis quanto militares.
+Os veículos aéreos não tripulados (VANTS), também conhecidos como drone,
+é um tipo de tecnologia fundamental tanto em áreas civis quanto militares.
 O uso de drones reduzem a exposição humana a tarefas repetitivas, de longa duração e em alguns casos, de alto risco \cite{dialogos}.
 Desempenham papel importante nas seguintes áreas: gerenciamento de desastres, vigilância aérea, fotografia aérea de rastreamento, pesquisa e resgate,
 monitoramento de gado, dentre outros. \cite{titounaLightweightSecurityTechnique2021} 
@@ -91,7 +91,7 @@ Com isso ocorre a extrema vulnerabilidade a diversos tipos de ataques, principal
 
 O tipo de ataque analisado nesse artigo é o \textit{spoofing}. 
 Ele é caracterizado por uma técnica de ataque na qual o agressor faz uso de antenas terrestres emitindo sinais falsos
-de localização com o objetivo de direcionar o dispositivo em direção ao atacante \cite {Spoofing}.
+de localização \cite {Spoofing}.
 Esse tipo de ação pode resultar em: danos materiais e o acesso indevido aos dados do usuário,
 conforme relatado em diversos incidentes mundialmente.
 \cite{g1drone2022a,g1drone2022b,bandnews2022,bemparana2022,veja2022,forbes2020,australianaviation2022}
@@ -99,8 +99,8 @@ conforme relatado em diversos incidentes mundialmente.
 Para garantir um vôo seguro do VANT é essencial ter medidas para detecção dos ataques de \textit{Spoofing de GPS}.
 A identificação precisa desses ataques é extremamente importante, pois técnicas avançadas de \textit{spoofing}
 podem causar disrupção no funcionamento do VANT. Portanto são necessários métodos robustos e adaptativos.
-\cite{isleyenGPSSpoofingDetection2024} Nesse contexto segundo Isleyen e Bahtiyar (2024, tradução nossa), algoritmos com aprendizado de máquina tem se mostrado promissores, pois são capazes de analisar
-grandes volumetrias de dados, identificando padrões e anomalias. Tais abordagens oferecem uma resposta robusta e adaptativa a essas ameaças contribuindo para as operações dos VANTs.
+\cite{isleyenGPSSpoofingDetection2024} Nesse contexto algoritmos com aprendizado de máquina tem se mostrado promissores, pois são capazes de analisar
+grandes volumetrias de dados, identificando padrões e anomalias. Tais abordagens oferecem uma resposta robusta e adaptativa a essas ameaças contribuindo para as operações dos VANTs  \cite[tradução nossa]{isleyenGPSSpoofingDetection2024}.
 
 
 %Delimitação e Escopo
@@ -120,7 +120,7 @@ trabalho serão expostos na seção 4.
 \section{Metodologia (Proposta de mudança)}
 
 Para alcançar o objetivo deste estudo, esta seção detalha a abordagem proposta para a classificação de possíveis ataques de \textit{spoofing} a sinais de GPS, avaliando o desempenho dos algoritmos: (i) Naive Bayes, (ii) K-NN, (iii) Extreme Random Forest, (iv) Random Forest e (v)  Gaussian Naive Bayes. 
-A metodologia adotada e os passos seguidos foram inspirados no artigo de \citar o artigo\, com o objetivo de explorar os dados obtido. Serão analisados a acurácia, precisão e a quantidade de falsos negativos.
+A metodologia adotada e os passos seguidos foram inspirados no artigo de \cite{Aissou2021}, com o objetivo de explorar os dados obtido. Serão analisados a acurácia, precisão e a quantidade de falsos negativos.
 
 \bibliographystyle{sbc}
 \bibliography{references}
