--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -55,7 +55,7 @@ implementação do modelo.
 % Justificativa & Objetivos
 % Delimitação e Escopo & Organização do Trabalho
 
-%============================= Ana e Jessica ============================================%
+
 Os veículos aéreos não tripulados (VANTS), também conhecidos como drone,
 é um tipo de tecnologia fundamental tanto em áreas civis quanto militares.
 O uso de drones reduzem a exposição humana a tarefas repetitivas, de longa duração e em alguns casos, de alto risco \cite{dialogos}.
@@ -82,18 +82,17 @@ conforme relatado em diversos incidentes mundialmente.
 
 Para garantir um vôo seguro do VANT é essencial ter medidas para detecção dos ataques de \textit{Spoofing de GPS}.
 A identificação precisa desses ataques é extremamente importante, pois técnicas avançadas de \textit{spoofing}
-podem causar disrupção no funcionamento do VANT. Portanto são necessários métodos robustos e adaptativos.
-\cite{isleyenGPSSpoofingDetection2024}
-
-Algoritmos com aprendizado de máquina tem se mostrado promissores, pois são capazes de analisar
+podem causar disrupção no funcionamento do VANT. Portanto são necessários métodos robustos e adaptativos \cite{isleyenGPSSpoofingDetection2024}.
+Nesse contexto algoritmos com aprendizado de máquina tem se mostrado promissores, pois são capazes de analisar
 grandes volumetrias de dados, identificando padrões e anomalias. Tais abordagens oferecem uma resposta robusta e adaptativa a essas ameaças contribuindo para as operações dos VANTs  \cite[tradução nossa]{isleyenGPSSpoofingDetection2024}.
 
 
 \section{Delimitação e Escopo}
 O \textit{dataset} que será utilizado como base de dados é o \textit{Mendeley Data} 
 \cite{aissou2022dataset}, esses dados foram gerados de sinais GPS autênticos e 
-contém aproximadamente 500,000 dados, que serão reduzidos a uma quantidade
-considerável. Portanto, os resultados do trabalho ficarão limitados a este \textit{dataset}.
+contém aproximadamente 500,000 dados que logo serão reduzidos a uma quantidade
+considerável. Então, os resultados do trabalho ficarão
+limitados a este \textit{dataset}. De acordo com o artigo, os ataques do tipo \textit{spoofing} podem ser classificados em: simples, intermediários e sofisticados.
 
 Nas próximas seções se estabelecerá a execução do trabalho. Na seção 3, faremos 
 nossa proposta de mudança ao trabalho de \cite{Aissou2021}, discutindo a 
@@ -104,8 +103,20 @@ trabalho serão expostos na seção 5.
 
 \section{Metodologia (Proposta de mudança)}
 
-Para alcançar o objetivo deste estudo, esta seção detalha a abordagem proposta para a classificação de possíveis ataques de \textit{spoofing} a sinais de GPS, avaliando o desempenho dos algoritmos: (i) Naive Bayes, (ii) K-NN, (iii) Extreme Random Forest, (iv) Random Forest e (v)  Gaussian Naive Bayes. 
-A metodologia adotada e os passos seguidos foram inspirados no artigo de \cite{Aissou2021}, com o objetivo de explorar os dados obtido. Serão analisados a acurácia, precisão e a quantidade de falsos negativos.
+Para alcançar o objetivo deste estudo, esta seção detalha a abordagem proposta para a classificação de possíveis ataques de \textit{spoofing} 
+a sinais de GPS, avaliando o desempenho dos algoritmos: (i) Naive Bayes, (ii) K-NN, (iii) Extreme Random Forest, (iv) Random Forest e (v)  Gaussian Naive Bayes. 
+
+A metodologia adotada e os passos seguidos foram inspirados no artigo de \cite{Aissou2021}, com o objetivo de explorar os dados obtidos. Serão analisados a acurácia, 
+precisão e a quantidade de falsos negativos. 
+Para isso a base será dividida em porções diferentes para testes e o treinamento do modelo, sendo 80\% para treino e 30\% para testes. E será aplicada a técnica de pré processamento 
+\textit{Principal Component Analysis} (PCA) para melhorar a precisão dos resultados final, esse tipo de processamento ajuda algoritmos de aprendizagem de máquina, simplificando o processo de reconhecimento dos dados.  Essa técnica é
+diferente da usada no artigo de \cite{Aissou2021}.
+
+%\subsection{Algoritmos}
+
+
+
+
 
 \bibliographystyle{sbc}
 \bibliography{references}
