--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -44,7 +44,7 @@ quantidade de falsos alarmes e fornecendo informações confiáveis por meio do
 aprendizado de máquina que exerce papel fundamental na classificação destes 
 ataques. A proposta deste projeto é realizar uma análise comparativa das 
 métricas de avaliação dos seguintes modelos de aprendizado de máquina: Random 
-Forest, Bagged Decision Trees e Extremely Randomized Trees, visando identificar 
+Forest, Naive Bayes, K-NN, Gaussian Naive Bayes e Extremely Randomized Trees, visando identificar 
 aquele que melhor equilibre a detecção correta de spoofing e viabilidade de 
 implementação do modelo.
 \end{resumo}
