--- a/article/references.bib
+++ b/article/references.bib
@@ -247,6 +247,17 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   urldate = {2025-07-24}
 }
 
+@inproceedings{panice2017,
+  author={Panice, G. and Luongo, S. and Gigante, G. and Pascarella, D. and Di Benedetto, C. and Vozella, A. and Pescapè, A.},
+  booktitle={2017 23rd International Conference on Automation and Computing (ICAC)}, 
+  title={A SVM-based detection approach for GPS spoofing attacks to UAV}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={1-11},
+  keywords={Global Positioning System;Unmanned aerial vehicles;Aircraft;Sensors;Security;Payloads;Accelerometers;RPAS;UAV;GPS spoofing;Cyber attack;Security},
+  doi={10.23919/IConAC.2017.8081999}}
+
 @misc{IBM02025,
   author  = {IBM},
   title   = {What is principal component analysis (PCA)? },
