--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -109,7 +109,7 @@ a sinais de GPS, avaliando o desempenho dos algoritmos: (i) Naive Bayes, (ii) K-
 A metodologia adotada e os passos seguidos foram inspirados no artigo de \cite{Aissou2021}, com o objetivo de explorar os dados obtidos. Serão analisados a acurácia, 
 precisão e a quantidade de falsos negativos. 
 Para isso a base será dividida em porções diferentes para testes e o treinamento do modelo, sendo 80\% para treino e 30\% para testes. E será aplicada a técnica de pré processamento 
-\textit{Principal Component Analysis} (PCA) para melhorar a precisão dos resultados final, esse tipo de processamento ajuda algoritmos de aprendizagem de máquina, simplificando o processo de reconhecimento dos dados.  Essa técnica é
+\textit{Principal Component Analysis} (PCA) para melhorar a precisão dos resultados final. Esse tipo de processamento ajuda algoritmos de aprendizagem de máquina, simplificando o processo de reconhecimento dos dados, essa técnica é
 diferente da usada no artigo de \cite{Aissou2021}.
 
 %\subsection{Algoritmos}
