--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -92,7 +92,7 @@ O \textit{dataset} que será utilizado como base de dados é o \textit{Mendeley 
 \cite{aissou2022dataset}, esses dados foram gerados de sinais GPS autênticos e 
 contém aproximadamente 500,000 dados que logo serão reduzidos a uma quantidade
 considerável. Então, os resultados do trabalho ficarão
-limitados a este \textit{dataset}. De acordo com o artigo, os ataques do tipo \textit{spoofing} podem ser classificados em: simples, intermediários e sofisticados.
+limitados a este \textit{dataset}. De acordo com o artigo de \cite{Aissou2021}, os ataques do tipo \textit{spoofing} podem ser classificados em: simples, intermediários e sofisticados.
 
 Nas próximas seções se estabelecerá a execução do trabalho. Na seção 3, faremos 
 nossa proposta de mudança ao trabalho de \cite{Aissou2021}, discutindo a 
