--- a/article/references.bib
+++ b/article/references.bib
@@ -246,3 +246,11 @@ for Space-Based Positioning, Navigation, and Timing (PNT) },
   note = {Disponível em: \url{https://australianaviation.com.au/2022/06/electromagnetic-interference-behind-darling-harbour-drone-crash/}. Acesso em: 24 jul. 2025},
   urldate = {2025-07-24}
 }
+
+@misc{IBM02025,
+  author  = {IBM},
+  title   = {What is principal component analysis (PCA)? },
+  year    = {2025},
+  url     = {https://www.ibm.com/think/topics/principal-component-analysis},
+  urldate = {2025-07-31}
+}
